--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
 
 <!-- Begin Jekyll SEO tag v2.5.0 -->
 <title>Hacker theme | Hacker is a theme for GitHub Pages.</title>
