--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
       <div class="container">
-        <h1>Hacker theme - RIP Kcits</h1>
+        <h1>RIP Kcits - Hacker theme - RIP Kcits</h1>
         <h2>Hacker is a theme for GitHub Pages.</h2>
 
         <section id="downloads">
