--- a/index.html
+++ b/index.html
@@ -29,4 +29,6 @@ layout: default
         </ul>
       </section>
     </div>
+    <footer>
+      <p>Copyright &copy; Kcits.rip - <script type="text/JavaScript"> var theDate=new Date() document.write(theDate.getFullYear()) </script></p>
 </body>
