--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@ layout: default
       <section id="main_content">
         <p>This site will be updated upon the RIP of Kcits, though currently it is alive and kicking</p>
         <ul>
-          <li><a href="https://kcits.com" class="btn"></li>
-          <li><a href="https://kcits.net" class="btn"></li>
-          <li><a href="https://kcits.info" class="btn"></li>
-          <li><a href="https://kcits.org" class="btn"></li>
-          <li><a href="https://kcits.photo" class="btn"></li>
-          <li><a href="https://kcits.mobi" class="btn"></li>
-          <li><a href="https://kcits.co" class="btn"></li>
-          <li><a href="https://kcits.cloud" class="btn"></li>
-          <li><a href="https://kcits.one" class="btn"></li>
-          <li><a href="https://kcits.desgin" class="btn"></li>
-          <li><a href="https://kcits.stream" class="btn"></li>
-          <li><a href="https://hazencats.com" class="btn"></li>
+          <li><a href="https://kcits.com" class="btn">Kcits.com</a></li>
+          <li><a href="https://kcits.net" class="btn">Kcits.net</a></li>
+          <li><a href="https://kcits.info" class="btn">Kcits.info</a></li>
+          <li><a href="https://kcits.org" class="btn">Kcits.org</a></li>
+          <li><a href="https://kcits.photo" class="btn">Kcits.photo</a></li>
+          <li><a href="https://kcits.mobi" class="btn">Kcits.mobi</a></li>
+          <li><a href="https://kcits.co" class="btn">Kcits.co</a></li>
+          <li><a href="https://kcits.cloud" class="btn">Kcits.cloud</a></li>
+          <li><a href="https://kcits.one" class="btn">Kcits.one</a></li>
+          <li><a href="https://kcits.desgin" class="btn">Kcits.design</a></li>
+          <li><a href="https://kcits.stream" class="btn">Kcits.stream</a></li>
+          <li><a href="https://hazencats.com" class="btn">HazenCats.com</a></li>
         </ul>
       </section>
     </div>
