--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@ layout: default
       </section>
     </div>
     <footer>
-      <p>Copyright &copy; Kcits.rip - <script type="text/JavaScript"> var theDate=new Date() document.write(theDate.getFullYear()) </script></p>
+      <p>Copyright &copy; Kcits.rip - 
+      <script type="text/JavaScript">
+        document.write(new Date().getFullYear());
+      </script></p>
 </body>
