Updated domian list

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@ layout: default
           <li><a href="https://kcits.info" class="btn">Kcits.info</a></li>
           <li><a href="https://kcits.org" class="btn">Kcits.org</a></li>
           <li><a href="https://kcits.photo" class="btn">Kcits.photo</a></li>
-          <li><a href="https://kcits.mobi" class="btn">Kcits.mobi</a></li>
+          <li><a href="https://kcits.monster" class="btn">Kcits.monster</a></li>
           <li><a href="https://kcits.co" class="btn">Kcits.co</a></li>
           <li><a href="https://kcits.cloud" class="btn">Kcits.cloud</a></li>
           <li><a href="https://kcits.one" class="btn">Kcits.one</a></li>
-          <li><a href="https://kcits.desgin" class="btn">Kcits.design</a></li>
+          <li><a href="https://kcits.icu" class="btn">Kcits.icu</a></li>
           <li><a href="https://kcits.stream" class="btn">Kcits.stream</a></li>
+          <li><a href="https://kcits.biz" class="btn">Kcits.stream</a></li>
           <li><a href="https://hazencats.com" class="btn">HazenCats.com</a></li>
         </ul>
       </section>
